themes/shuffle/assets/css/style.css
/* ... */
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Montserrat", sans-serif;
    line-height: 1.6;
}

.fs-1,
.fs-2,
.fs-3,
.fs-4,
.fs-5,
.fs-6 {
    font-family: "Montserrat", sans-serif;
    line-height: 1.6;
}

:not(.site-title)>a {
    color: var(--color-purple);
    text-decoration: none !important;
}

.site-title>a,
.post-title>a,
.post-navigation a {
    color: var(--color-dark) !important;
    text-decoration: none !important;
}

a:hover {
    color: var(--color-purple-highlight) !important;
}

#header-title {
    font-family: "Montserrat", sans-serif;
    color: var(--color-dark) !important;
}

h1.page-title {
    font-family: "Montserrat", sans-serif;
    color: var(--color-dark) !important;
    line-height: 1.2;
    font-size: 2.25rem;
    clear: none;
    margin: 0;
    padding: 0;
    word-wrap: break-word;
}

:not(.comment-content)>p {
    font-size: 18px;
    font-size: 1.125rem;
    margin-bottom: 2rem;
}

.page-title {
    font-family: "Montserrat", sans-serif;
    color: var(--color-dark) !important;
    line-height: 1.2;
    font-size: 1.4375rem;
    clear: none;
    line-height: 1.2;
    margin: 0;
    padding: 0;
    word-wrap: break-word;
}

.text-purple {
    color: var(--color-purple) !important;
}

th {
    padding: 0.75rem;
    font-size: 18px;
    line-height: 1.5;
    vertical-align: top;
    border-top: 1px solid #ebebeb !important;
}


td {
    padding: 0.75rem;
    font-size: 18px;
    line-height: 1.5;
    vertical-align: top;
    border-top: 1px solid #ebebeb !important;
    font-family: "Lato", sans-serif;
}

.site-title {
    font-family: "Montserrat", sans-serif;
    font-size: 36px;
    font-size: 2.25rem;
    font-weight: 700;
    line-height: 1.3;
    margin: 0;
    padding: 0;
    color: var(--color-dark) !important;
    word-wrap: break-word;
}

/* #header,
#footer {
    padding: 3.75rem 0;
} */

.site-title a:hover,
.site-title a:focus,
.site-title a:active {
    color: #666 !important;
}

body {
    color: #3d3d3d !important;
    font-family: "Lato", sans-serif !important;
    font-size: 16px !important;
    font-size: 1rem !important;
    line-height: 1.6 !important;
}

.wrapper {
    background-image: url(/shuffle/img/background.jpg), url(img/background.jpg);
    background-position: left top;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: scroll !important;
    background-color: transparent !important;
}

#header {
    background-color: white !important;
}

.navbar {
    background-color: var(--color-dark) !important;
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 1rem !important;
}

#footer {
    background-color: var(--color-dark) !important;
    color: #ddd !important;
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.nav-link {
    color: #fff !important;
    padding: 0 0.9375rem !important;
}

.nav-link:hover,
.nav-link.active {
    color: #a6a6a6 !important;
}

.nav-item>a {
    color: #fff;
    font-size: 0.875rem;
    text-decoration: none;
}

#navbarNav a.nav-link {
    text-transform: uppercase;
}

.offcanvas a {
    font-size: 1rem !important;
}

.input-group .form-control,
.input-group .btn {
    border-radius: 0;
}

#search-submit.btn {
    background-color: var(--bs-secondary-bg);
}

.card {
    --bs-card-border-radius: 0 !important;
}

.post-title {
    font-family: "Montserrat", sans-serif;
    color: var(--color-dark) !important;
    line-height: 1.5;
    margin-bottom: 15px !important;
}

.post-excerpt {
    font-size: 15px;
    font-size: 0.9375rem;
    line-height: 1.5;
    margin: 0;
    padding: 0;
    word-wrap: break-word;
    font-family: "Lato", sans-serif !important;
    color: #3d3d3d !important;
}

.post-meta,
.post-meta-footer {
    font-family: "Lato", sans-serif;
    color: #3d3d3d !important;
    font-size: 0.75rem !important;
    font-weight: 400 !important;
    text-transform: uppercase;
    line-height: 1.2rem !important;
    letter-spacing: 1px !important;
}

.post-meta-footer a,
.tags a {
    color: #3d3d3d !important;
    text-decoration: none !important;
}

.navbar-toggler-label {
    font-family: "Lato", sans-serif;
    font-size: 14px;
    font-size: 0.875rem;
    letter-spacing: 2px;
    margin: 0 0.3125rem;
    text-transform: uppercase;
}

.depth-1 {
    margin-left: 2rem;
}

.depth-2 {
    margin-left: 4rem;
}

.post-meta a:hover,
.post-meta-footer a:hover,
.tags a:hover {
    color: var(--color-dark) !important;
}

a.comment-meta.comment-author {
    color: var(--color-dark) !important;
    text-decoration: none !important;
}

a.comment-meta.comment-author:hover {
    color: #999 !important;
}

.comment-content {
    font-size: 1rem !important;
    line-height: 1.6 !important;
}

.post-meta-footer .category::after {
    content: "\2022";
    font-size: 0.75rem;
    margin: 0 0.4375rem;
}

.post-meta i {
    color: var(--color-purple);
    font-size: 12px;
    margin: 0 5px 0 0;
    margin: 0 0.3125rem 0 0;
}

.widget-title {
    font-size: 1.125rem !important;
    line-height: 1.3;
    font-family: "Montserrat", sans-serif !important;
    color: var(--color-dark) !important;
    text-transform: uppercase;
    margin-bottom: 1.375rem !important;
}

#sidebar .row .col {
    margin-bottom: 30px !important;
}

#header-img img {
    background-position: center center;
    background-size: cover;
    background-repeat: repeat;
    object-fit: cover;
    background-attachment: scroll;
    position: relative;
    height: 360px;
    width: 100%;
    z-index: -1 !important;
}

#wrapper {
    object-fit: cover;
    position: absolute;
    height: 360px !important;
    width: 100% !important;
    z-index: 0 !important;
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#title-card {
    background: rgba(255, 255, 255, 0.95);
    border-color: transparent;
    text-align: center;
    z-index: 10;
    width: 80%;
}
/* ... */

